...
                Image(.tmdbLogo)
                
                VStack(spacing: 20) {
                    HStack(spacing: 20) {
                        Image(systemName: "person.fill")
                        TextField("Username", text: $username)
                            .accessibilityIdentifier("UsernameField")
                            .focused($focusField, equals: .username)
                            .submitLabel(.next)
                            .onSubmit {
                                focusField = .password
                            }
                    }
                    .decoratedField()
                    
                    HStack(spacing: 20) {
                        Image(systemName: "lock.fill")
                        SecureField("Password", text: $password)
                            .accessibilityIdentifier("PasswordField")
                            .focused($focusField, equals: .password)
                            .submitLabel(.done)
                            .onSubmit {
                                focusField = nil
                            }
                    }
...
